<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.jboss.narayana.quickstart.jta</groupId>
        <artifactId>narayana-quickstarts-jta</artifactId>
        <version>7.0.1.Final-SNAPSHOT</version>
    </parent>
    <groupId>org.jboss.narayana.quickstart.jta</groupId>
    <artifactId>jakartaee_transactional_app</artifactId>
    <name>basic integration example</name>
    <description>basic integration example</description>
    <packaging>war</packaging>

    <properties>
        <server.args>-Dprojectdir=${project.build.directory}</server.args>
        <surefire.argline></surefire.argline>
        <jvm.args>-server -Xms64m -Xmx1024m -XX:MaxMetaspaceSize=512m ${server.args}</jvm.args>
        <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n</jvm.args.debug>
        <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
    </properties>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <!-- WildFly plugin to deploy war as a convenience -->
            <plugin>
                <groupId>org.wildfly.plugins</groupId>
                <artifactId>wildfly-maven-plugin</artifactId>
                <version>1.2.2.Final</version>
            </plugin>
            <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
				processors -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${version.surefire.plugin}</version>
                <configuration>
                    <skip>false</skip>
                    <argLine>${surefire.argline}</argLine>
                    <systemPropertyVariables combine.children="append">
                        <server.jvm.args>${jvm.args} ${jvm.args.debug}</server.jvm.args>
                        <node.address>127.0.0.1</node.address>
                        <xboot.classpath>${xboot.classpath}</xboot.classpath>
                    </systemPropertyVariables>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>${version.jakarta.persistence-api}</version>
        </dependency>
        <!-- JSF dependencies -->
        <dependency>
            <groupId>org.jboss.narayana.jta</groupId>
            <artifactId>narayana-jta</artifactId>
            <version>${project.version}</version>
            <scope>provided</scope>
        </dependency>
        <!-- Import the injection annotations -->
        <dependency>
            <groupId>jakarta.inject</groupId>
            <artifactId>jakarta.inject-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <!-- For logging -->
        <dependency>
           <groupId>org.wildfly.core</groupId>
           <artifactId>wildfly-logging</artifactId>
           <version>${version.wildfly.logging}</version>
           <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.wildfly.extras.creaper</groupId>
            <artifactId>creaper-core</artifactId>
            <version>${version.creaper}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.wildfly.core</groupId>
            <artifactId>wildfly-controller-client</artifactId>
            <version>${version.wildfly.core}</version>
        </dependency>
        <dependency>
            <groupId>org.wildfly.core</groupId>
            <artifactId>wildfly-cli</artifactId>
            <version>${version.wildfly.core}</version>
        </dependency>
        <!-- Arquillian allows you to test the example inside a container -->
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.protocol</groupId>
            <artifactId>arquillian-protocol-servlet-jakarta</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.core</groupId>
            <artifactId>arquillian-core-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-extension-byteman</artifactId>
            <version>${version.arquillian.byteman}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman</artifactId>
            <version>${version.byteman}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.byteman</groupId>
            <artifactId>byteman-submit</artifactId>
            <version>${version.byteman}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jakarta.ejb</groupId>
            <artifactId>jakarta.ejb-api</artifactId>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <property>
                    <name>noArq</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${version.surefire.plugin}</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>arq</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>!noArq</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly.arquillian</groupId>
                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${version.surefire.plugin}</version>
                        <configuration>
                            <skip>false</skip>
                            <systemPropertyVariables combine.children="append">
                                <!--
                                    Used in arquillian.xml
                                -->
                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
                                <node.address>127.0.0.1</node.address>
                                <xboot.classpath>${xboot.classpath}</xboot.classpath>
                            </systemPropertyVariables>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>arqIPv6</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.wildfly.arquillian</groupId>
                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                    <scope>test</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${version.surefire.plugin}</version>
                        <configuration>
                            <skip>false</skip>
                            <argLine>${ipv6.server.jvm.args}</argLine>
                            <systemPropertyVariables combine.children="append">
                                <!--
                                    Used in arquillian.xml
                                -->
                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
                                <node.address>[::1]</node.address>
                            </systemPropertyVariables>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!-- Byteman-Arquillian-related profiles for configuring use of Byteman on different platforms/JDKs-->
        <!-- these setup is needed for Arquillian Extension Byteman which makes possible to use Byteman rules with @BMRule while Arquillian JUnit runner is in command -->
        <profile>
            <id>use-toolsjar-jigsaw</id>
            <activation>
                <jdk>[1.9,)</jdk>
            </activation>
            <properties>
                <!-- required for VM attach under JDK 9-->
                <surefire.argline>-Djdk.attach.allowAttachSelf=true</surefire.argline>
                <xboot.classpath>-Djdk.attach.allowAttachSelf=true</xboot.classpath>
            </properties>
            <dependencies />
        </profile>
    </profiles>
</project>